--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
+            <input  class="new-score" type="number">
+            <button class="btn-change-score"><i class="ion-ios-plus-outline"></i>Set New Score</button>
+            <img src="dice-5.png" alt="Dice" class="dice" id="dice-one">
+            <img src="dice-1.png" alt="Dice" class="dice" id="dice-two">
             
-            <img src="dice-5.png" alt="Dice" class="dice">
         </div>
         
         <script src="scripts/app.js"></script>
